@@ -946,36 +946,6 @@ int summon_hostile_monsters(object *op,int n,const char *monstername){
 }
 
 
-/** Some local definitions for shuffle_attack(). */
-    struct {
-	int attacktype;
-	int face;
-    } ATTACKS[22] = {
-	{AT_PHYSICAL,0},
-	{AT_PHYSICAL,0},  /*face = explosion*/
-	{AT_PHYSICAL,0},
-	{AT_MAGIC,1},
-	{AT_MAGIC,1},   /* face = last-burnout */
-	{AT_MAGIC,1},
-	{AT_FIRE,2},
-	{AT_FIRE,2},  /* face = fire....  */
-	{AT_FIRE,2},
-	{AT_ELECTRICITY,3},
-	{AT_ELECTRICITY,3},  /* ball_lightning */
-	{AT_ELECTRICITY,3},
-	{AT_COLD,4},
-	{AT_COLD,4},  /* face=icestorm*/
-	{AT_COLD,4},
-	{AT_CONFUSION,5},
-	{AT_POISON,7},
-	{AT_POISON,7}, /* face = acid sphere.  generator */
-	{AT_POISON,7},  /* poisoncloud face */
-	{AT_SLOW,8},
-	{AT_PARALYZE,9},
-	{AT_FEAR,10}  };
-
-
-
 /**
  * This routine shuffles the attack of op to one of the
  * ones in the list. It does this at random.  It also
